--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -107,6 +107,7 @@
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:enternewleads' %}" class="nav-link">Enter New Leads</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:leadoverview' %}" class="nav-link">Lead Overview</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:mysales' %}" class="nav-link">My Sales</a></li>
+                  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:productmanagement' %}" class="nav-link">Manage Products</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:networkmarketing' %}" class="nav-link">How To Leverage Your Network</a></li>
                   <!-- <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:enteraffiliates' %}" class="nav-link">Enter Affiliate Agents</a></li> -->
                 <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:salesaffiliates' %}" class="nav-link">Sales Affiliates Overview</a></li> -->
