--- a/whitelabelpartnerportal/templates/productManagement/editTradeline.html
+++ b/whitelabelpartnerportal/templates/productManagement/editTradeline.html
@@ -61,11 +61,10 @@
                                     <td>{{ tradeline.product }}</td>
                                     <td>{{ tradeline.tradeline_amount }}</td>
                                     <td>{{ tradeline.company_reports_to }}</td>
+                                    <td>${{ tradeline.price }}</td>
+
                                     <td>
-                                        <input name="price" value="{{ tradeline.price }}" type="number" step="0.01">
-                                    </td>
-                                    <td>
-                                        <input name="charge" value="{{ tradeline.charge }}" type="number" step="0.01">
+                                        $<input name="charge" value="{{ tradeline.charge }}" type="number" step="0.01">
                                     </td>
                                     <td>{{ tradeline.video_link }}</td>
                                     <td>
