--- a/whitelabelpartnerportal/templates/productManagement/editUserSteps.html
+++ b/whitelabelpartnerportal/templates/productManagement/editUserSteps.html
@@ -54,7 +54,7 @@
                                     <td>{{ userstep.name }}</td>
 
                                     <td>
-                                        <input name="price" value="{{ userstep.price }}" type="number" step="0.01">
+                                        $<input name="price" value="{{ userstep.price }}" type="number" step="0.01">
                                     </td>
                                     <td>
                                         <input name="product" value="{{ userstep.product_id }}" type="hidden">
