--- a/whitelabelpartnerportal/templates/productManagement/editTradeline.html
+++ b/whitelabelpartnerportal/templates/productManagement/editTradeline.html
@@ -64,7 +64,7 @@
                                     <td>${{ tradeline.price }}</td>
 
                                     <td>
-                                        $<input name="charge" value="{{ tradeline.charge }}" type="number" step="0.01">
+                                        $<input name="charge" value="{{ tradeline.charge }}" type="number" step="0.01" min="0">
                                     </td>
                                     <td>{{ tradeline.video_link }}</td>
                                     <td>
