--- a/business/templates/MoneyReferringFriends.html
+++ b/business/templates/MoneyReferringFriends.html
@@ -43,7 +43,7 @@
 
         </style>
         <br>
-        <b><h2 style="text-align:center;">Make Extra Money Today By Joining Our Affiliate Program</h2></b>
+        <b><h2 style="text-align:center;">Make Extra Money Today By Joining Our Affiliate Program <br> Or White Label Partner Program. (Both Are Free To Join)</h2></b>
         <br><br>
         <div class="row">
             <div class="col-md-6 col-sm-6">
@@ -54,7 +54,22 @@
                         <p class="card-text">Click The Button Below To Enter The Affiliate Portal</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <a href="https://getdinerotodayaffiliateprogram.tapfiliate.com/" target="_blank" class="btn btn-primary">Enter Affiliate
+                                <a href="https://getdinerotoday1.leaddyno.com/" target="_blank" class="btn btn-primary">Enter Affiliate
+                                    Portal</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <div class="card mb-4 shadow-sm">
+                    <img src="https://images.pexels.com/photos/3184465/pexels-photo-3184465.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                         height="370px" width="100%" alt="">
+                    <div class="card-body">
+                        <p class="card-text">Click The Button Below To Become A White Label Partner</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="btn-group">
+                                <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="btn btn-primary">Enter White Label Partner
                                     Portal</a>
                             </div>
                         </div>
