--- a/business/templates/equifax.html
+++ b/business/templates/equifax.html
@@ -43,7 +43,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a href="http://nav.nkwcmr.net/c/2006174/675356/2410" target="_blank"
-                                   class="btn btn-primary">Check My Business Equifax Report</a>
+                                   class="btn btn-primary">Check My Business <br>Equifax Report</a>
                             </div>
                         </div>
                     </div>
