--- a/business/templates/userData/userData.html
+++ b/business/templates/userData/userData.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
 
-                    <div class="row mb-2">
+                  <!--  <div class="row mb-2">
                         <div class="col-4">
                             {{ form.personal_street_address_2.label_tag }}{{ form.personal_street_address_2 }}
                         </div>
@@ -59,7 +59,7 @@
                         <div class="col-4">
                             {{ form.billing_street_address_2.label_tag }}{{ form.billing_street_address_2 }}
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="row mb-2">
                         <div class="col-4">
