--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -49,10 +49,18 @@
                             <a href="{% url 'business:tradelines' %}"
                                class="nav-link"> Add Business Tradelines </a>
                         </li>
+                        {% if dynamic.sub_name != "" %}
+                        <li class="nav-item">
+                            <a href="https://www.youtube.com/watch?v=tD1H2-1xihA" target="_blank"
+                               class="nav-link"> Watch Webinar On Building Business Credit </a>
+                        </li>
+                        {% else %}
                         <li class="nav-item">
                             <a href="https://www.youtube.com/watch?v=xNCfnbGT5hY&feature=youtu.be" target="_blank"
                                class="nav-link"> Watch Webinar On Building Business Credit </a>
                         </li>
+                        {% endif %}
+
                         <li class="nav-item">
                             <a href="/{{ request.resolver_match.app_name }}/financing" class="nav-link"> Create
                                 My {{ verbose_portal_name }} Business Financing Plan </a>
@@ -137,7 +145,7 @@
                                     Business </a></li>
                                 <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/dunn-brad"
                                                         class="nav-link"> Dunn &
-                                    Bradsheet </a></li>
+                                    Bradstreet </a></li>
                                 <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/equifax"
                                                         class="nav-link"> Equifax
                                     Business </a></li>
@@ -266,10 +274,12 @@
                             <a href="/{{ request.resolver_match.app_name }}/refer" class="nav-link"> Make Extra Money
                                 Referring Friends! </a>
                         </li>
+                          {% if dynamic.sub_name == "" %}
                         <li class="nav-item">
-                            <a href="{% url 'affiliate:home-affiliate' %}" class="nav-link">Go To Affiliate Agent
+                            <a href="https://getdinerotoday1.leaddyno.com/" target="_blank" class="nav-link">Go To Affiliate Agent
                                 Portal</a>
                         </li>
+                          {% endif %}
                         {% if dynamic.sub_name == "" %}
                             <li class="nav-item">
                                 <a href="{% url 'whitelabelpartnerportal:home-whitelabel' %}" class="nav-link"> Go To
