--- a/getdinerotoday/templates/pages/base-whitelabel.html
+++ b/getdinerotoday/templates/pages/base-whitelabel.html
@@ -141,6 +141,8 @@
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:addbankinfo' %}" class="nav-link">Add Bank Account Information To Receive Payments *Or You Can Add Paypal Information*</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:addpaypalinfo' %}" class="nav-link">Add Paypal Information To Receive Payments</a></li>
                   <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:merchant' %}" class="nav-link">Sign Up For Merchant Account</a></li>
+                  <li class="nav-item"><a href="https://apps.apple.com/us/app/white-label-partner-gdt/id1530824382" target="_blank" class="nav-link">Download Partner App For Iphone</a></li>
+                <!--  <li class="nav-item"><a href="{% url 'whitelabelpartnerportal:merchant' %}" class="nav-link">Download Partner App For Android</a></li> -->
                </ul>
             </div>
          </div>
