--- a/getdinerotoday/templates/pages/base-business.html
+++ b/getdinerotoday/templates/pages/base-business.html
@@ -302,6 +302,8 @@
                             <a href="{% url 'chromeextension:chromeextensionindex' %}" class="nav-link"> Go To Chrome
                                 Extension Portal </a>
                         </li>
+                      <!--  <li class="nav-item"><a href="/{{ request.resolver_match.app_name }}/lifegoals" class="nav-link">Life Money Hacks</a></li> -->
+
                         <li class="nav-item">
                             {% if dynamic.iphoneApp %}
                                 <a href={{ dynamic.iphoneApp }} target="_blank" class="nav-link"> Download Our Iphone
