--- a/user/templates/my_progress.html
+++ b/user/templates/my_progress.html
@@ -182,8 +182,26 @@
 
                         </form>
                     </div>
+
+
                 </div>
+
+                <div class='widget white-bg friends-group clearfix' id="credit-cards">
+                    <div class="widget-title">Actions</div>
+                    <div class="widget-content" id="add_new_card">
+                        <div class="row" >
+                            <div class="col">
+                                <a class="btn btn-primary" style="width: 100%" href="{% url 'business:user_data' %}">
+                                    Edit my personal data
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
+
             <div class="col-lg-8">
 
                 <div class='widget white-bg clearfix' id="user_info" style="display:block;">
